# trust-probe

./: CLAUDE.md  LICENSE  README.md  RESULTS.md  pyproject.toml
.ci/: ci.yml
.github/workflows/: kaggle.yml
kaggle/: kernel-metadata.json  validate_kaggle.py
src/trust_probe/: __init__.py  activations.py  baselines.py  blackbox.py  cli.py  datasets.py  evaluate.py  fusion.py  metrics.py  probes.py
tests/: test_blackbox.py  test_cli.py  test_datasets.py  test_evaluate.py  test_fusion.py  test_metrics.py  test_probes.py
