[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trust-probe"
version = "0.1.0"
description = "Real-time hallucination trust layer: fuses white-box activation probes with black-box reliability signals, with a full evaluation harness."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Girisankar G", email = "girisankargopakumar@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "scikit-learn>=1.3"]

[project.optional-dependencies]
gpu = ["torch>=2", "transformers>=4.46", "accelerate>=0.30"]
nli = ["sentence-transformers>=2"]
dev = ["pytest>=7", "ruff>=0.4"]

[project.scripts]
trustprobe = "trust_probe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
